Liabilities: fix total not calculating Applicant Total Income: don't include income from previous employment Application Summary: fix lack of spacing on totals Application Summary: fix totals not updating

--- a/app/styles/components/applicant-summary.styl
+++ b/app/styles/components/applicant-summary.styl
@@ -25,6 +25,8 @@ Created on 04/05/2015 by PhpStorm
 		&-income
 			border-bottom 1px solid #E2E2E2
 			padding 1em
+			.table-total
+				padding inherit
 			.applicant-summary-title
 				margin 0 0 1rem 0
 			income-table
