--- a/app/styles/components/tables.styl
+++ b/app/styles/components/tables.styl
@@ -23,6 +23,8 @@ $tableBorder
 $tableTransition ?= easing("in-quad") 0.1s background
 
 .table
+	&-total
+		padding 1em
 	&-subtotal, &-total
 		text-align right
 	@extend $table
